# ebay-parser

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: __main__.py  settings.py
docker-compose/: app-prod.yaml  app.yaml
