[tool.poetry]
name = "ebay-parser"
version = "0.1.0"
description = ""
authors = ["h1w <bpqvgq@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ebaysdk = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.1.0"
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bufbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B904", # syntax error
    # "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow imported but unused for __init__.py

[tool.ruff.lint.pyupgrade]
# Preserve types, event if a file imports `from __future__ import annotations`
keep-runtime-typing = true
